<resources>
    <string name="app_name">TechJobSpotter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_welcome">Hi, Welcome back</string>
    <string name="message_find_job">Find your perfect job</string>
    <string name="message_search">What are you looking for?</string>
    <string name="txt_marked_jobs">Marked Job</string>
    <string name="message_show_all">Show all</string>
    <string name="title_recommend_jobs">Recommended Job</string>
    <string name="message_data_not_found">No Data Found</string>
    <string name="type_text">type</string>
    <string name="title_text">title</string>
    <string name="company_name_text">company name</string>
    <string name="location_text">location</string>
    <string name="format_date_text">date</string>
    <string name="welcome_message">Hola, %1$s! Bienvenido a nuestra aplicación.</string>
    <string name="error_message">¡Lo siento! Algo salió mal. error: %1$s</string>
    <string name="error_message_no_internet">¡Lo siento! No tienes conexión a Internet.</string>
    <string name="error_message_no_data">¡Lo siento! No hay datos disponibles.</string>
    <string name="error_jobs_not_found">¡Lo siento! No se encontraron trabajos.</string>
    <string name="ok">OK\n</string>
    <string name="txt_how_to_apply">How To Apply</string>
    <string name="title_job_description">Job Description</string>
    <string name="title_company_information">Company Information</string>
    <string name="mark_favorite">Mark favorite</string>
    <string name="lorem">lorem</string>
    <string name="item_type">item.type</string>
    <string name="item_title">{item.title}</string>
    <string name="item_date">{item.publish_date}</string>
    <string name="item_location">item.location</string>
    <string name="item_company">{item.company}</string>
    <string name="item_companyurl">item.companyUrl</string>
    <string name="jobs_found">"%1$d Jobs Found"</string>
    <string name="jobs_marked">"%1$d Jobs Marked"</string>
    <string name="posted_on">"Posted on %1$s"</string>

    <string name="confirmation">Confirmation</string>
    <string name="redirect_message">You are about to leave the app. Do you want to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>