<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeJobsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapse"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            app:collapsedTitleTextAppearance="@style/collapsedTitleStyle"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="@dimen/size_26dp"
            app:expandedTitleMarginStart="@dimen/size_26dp"
            app:expandedTitleTextAppearance="@style/expandedTitleStyle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="Tech Jobs"
            app:titleEnabled="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/banner_1" />

                <TextView
                    android:id="@+id/welcomeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_26dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="@dimen/mid_padding_1"
                    android:layout_toStartOf="@id/notifyOptions"
                    android:fontFamily="@font/book"
                    android:text="@string/message_welcome"
                    android:textColor="@color/blue_025"
                    android:textSize="@dimen/size_16sp" />

                <TextView
                    android:id="@+id/secondaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/welcomeText"
                    android:layout_marginStart="@dimen/size_26dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="@dimen/mid_padding_1"
                    android:layout_toStartOf="@id/notifyOptions"
                    android:fontFamily="@font/bold"
                    android:text="@string/message_find_job"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/notifyOptions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="42dp"
                    android:layout_marginEnd="@dimen/size_16dp"
                    android:paddingBottom="@dimen/size_10dp"
                    app:srcCompat="@drawable/ic_baseline_more_vert_24"
                    app:tint="@color/white" />

                <LinearLayout
                    android:id="@+id/searchLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginBottom="60dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardBackgroundColor="@color/blue_250"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="0dp"
                        app:strokeColor="@color/blue_300"
                        >

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="60dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginHorizontal="@dimen/size_16dp"
                                android:fontFamily="@font/book"
                                android:singleLine="true"
                                android:text="@string/message_search"
                                android:textColor="@color/blue_025"
                                android:textSize="@dimen/size_16sp" />

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="60dp"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="@dimen/size_16dp"
                                android:contentDescription="@null"
                                android:src="@drawable/ic_round_search_24"
                                app:tint="@color/blue_050" />
                        </RelativeLayout>
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                android:theme="@style/Theme.TechJobSpotter.Toolbar"
                app:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.TechJobSpotter.PopupOverlay"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_rounded_top"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:layout_anchor="@id/appbar"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:fillViewport="true">

                <RelativeLayout
                    android:id="@+id/contentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/markedTitle"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="21dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="21dp"
                        android:fontFamily="@font/medium"
                        android:text="@string/txt_marked_jobs"
                        android:textColor="@color/gray_600"
                        android:textSize="17sp" />

                    <TextView
                        android:visibility="gone"
                        android:id="@+id/showAllMarked"
                        style="@style/viewParent.moreText"
                        android:paddingTop="6dp"
                        android:layout_alignParentEnd="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:text="@string/message_show_all"
                        />

                    <androidx.recyclerview.widget.RecyclerView
                        android:visibility="gone"
                        android:id="@+id/recyclerViewMarked"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/markedTitle"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="@dimen/size_10dp"
                        android:nestedScrollingEnabled="true"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="2"
                        tools:listitem="@layout/item_job_marked" />

                    <TextView

                        android:id="@+id/recommendedTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/recyclerViewMarked"
                        android:layout_marginStart="21dp"
                        android:layout_marginTop="@dimen/x_large_margin"
                        android:layout_marginEnd="21dp"
                        android:fontFamily="@font/medium"
                        android:text="@string/title_recommend_jobs"
                        android:textSize="@dimen/size_18sp" />

                    <TextView
                        style="@style/viewParent"
                        android:id="@+id/showAllRecommended"
                        android:layout_marginTop="@dimen/x_large_margin"
                        android:layout_marginEnd="20dp"
                        android:fontFamily="@font/book"
                        android:textSize="@dimen/size_16sp"
                        android:paddingHorizontal="@dimen/mid_padding_2"

                        android:layout_below="@id/recyclerViewMarked"
                        android:layout_alignParentEnd="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/message_show_all"
                        />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/recommendedTitle"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginBottom="20dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                        tools:itemCount="3"
                        tools:listitem="@layout/item_job" />

                </RelativeLayout>

            </androidx.core.widget.NestedScrollView>





            <LinearLayout
                android:id="@+id/emptyView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fillViewport="true"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="100dp"
                    android:contentDescription="@null"
                    android:src="@drawable/empty_svg" />

                <TextView
                    android:id="@+id/textEmpty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/medium"
                    android:gravity="center"
                    android:paddingStart="@dimen/size_16dp"
                    android:paddingEnd="@dimen/size_16dp"
                    android:paddingTop="@dimen/size_16dp"
                    android:text="@string/message_data_not_found" />

                <TextView
                    android:id="@+id/textEmptyErr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/book"
                    android:gravity="center"
                    android:paddingStart="@dimen/size_16dp"
                    android:paddingEnd="@dimen/size_16dp"
                    android:paddingBottom="@dimen/size_16dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/shadow"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="@dimen/size_16dp"
                android:contentDescription="@null"
                android:src="@drawable/bg_shadow_up_to_down"
                android:visibility="visible" />

            <ImageView
                android:layout_width="42dp"
                android:layout_height="5dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@drawable/bg_strip_round"
                android:contentDescription="@null" />

        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <include
        android:id="@+id/errorStateView"
        layout="@layout/empty_view"
        android:visibility="gone"
        android:layout_marginTop="@dimen/mid_padding_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swipeRefresh"
        />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_16dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:shimmer_auto_start="true"
        app:shimmer_duration="800">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/item_job_placeholder" />

            <include layout="@layout/item_job_placeholder" />

            <include layout="@layout/item_job_placeholder" />

            <include layout="@layout/item_job_placeholder" />

            <include layout="@layout/item_job_placeholder" />

            <include layout="@layout/item_job_placeholder" />

        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>